--- a/VoiceTimer/InfoPage.xaml
+++ b/VoiceTimer/InfoPage.xaml
@@ -96,7 +96,7 @@
 
                     <StackPanel Orientation="Horizontal" Margin="12">
                         <Border Width="36" Height="36" VerticalAlignment="Top" Margin="0,8,4,0">
-                            <Image Source="Assets/Images/sleep.png"
+                            <Image Source="Assets/Images/star.png"
                                        HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,4" />
                         </Border>
                         <StackPanel Width="400">
