--- a/VoiceTimer/Controls/ThemedAboutControlBase.xaml
+++ b/VoiceTimer/Controls/ThemedAboutControlBase.xaml
@@ -34,7 +34,7 @@
                 <Button x:Name="RateAndReviewElement" Height="72" Content="rate and review" Style="{StaticResource NoAccentButton}"/>
                 <Button x:Name="MoreAppsElement" Height="72" Content="more apps" Style="{StaticResource NoAccentButton}"/>
                 <TextBlock x:Name="BrandingElement" Style="{StaticResource PhoneTextSmallStyle}" Margin="12"
-                           HorizontalAlignment="Center" Text="powered by PhoneKit Framework"/>
+                           HorizontalAlignment="Center" Text="powered by PhoneKit Framework" Foreground="Gray"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
